Enroll feature fixed and working, sanitize not working
Included enroll feature.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
         document.getElementById("showAll");
         </script>
         <label for="Name">Name:</label>
-        <input type="text" id="Name" name="Name" placeholder="Full name here">
+        <input type="text" id="username" name="username" placeholder= "username">
         <label for="Grade">Grade:</label>
-        <input type="text" id="Grade" name="Grade" placeholder="Numerical grade here">
-        <button id = "execute" class = "get"> Get person's grade </button>
-        <button class = "getAll"> Show all grades </button>
-        <button class = "addStudent"> Add student & grade </button>
-        <button class = "editGrade"> Edit student's grade </button>
-        <button class = "deleteGrade"> Delete student's grade </button>
+        <input type="text" id="classname" name="classname" placeholder="classname">
+        <button class = "enrollStudent"> enrollStudent</button>
         <p id = "GradeDisplay"></p>
         <table id = "gradeTable">
             <tr>
