Finished all but one teacher func
Added all functionality, needs token to integrate backend

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <label for="Grade">Grade:</label>
         <input type="text" id="classname" name="classname" placeholder="classname">
         <button class = "enrollStudent"> enrollStudent</button>
+        <button class = "deleteStudent"> deleteStudent</button>
         <p id = "GradeDisplay"></p>
         <table id = "gradeTable">
             <tr>
